<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gachat.main.ui.user.FeedbackActivity">

    <include layout="@layout/toolbar_base"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="159.67dp"
        android:orientation="vertical"
        android:layout_margin="32dp"
        android:background="@drawable/shape_frame_line_gray">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="none"
            android:orientation="vertical">
            <EditText
                android:id="@+id/et_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/txt_feedback_hint"
                android:padding="2dp"
                android:background="@null"
                android:textColor="#92979A"
                android:textSize="14sp"/>
        </ScrollView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="5dp"
            android:textColor="#92979A"
            android:textSize="12sp"
            android:text="@string/txt_wordCount"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#F3F8FC">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/txt_contact"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="43.33dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="31dp"
            android:background="@drawable/shape_frame_line_gray">
            <EditText
                android:id="@+id/et_contact"
                style="@style/EditTextViewTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_contact_hint"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:background="@null"
                android:textColor="#92979A"
                android:textSize="14sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_finish"
            style="@style/EditTextViewTheme"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:background="@drawable/login_btn_login_default"
            android:textColor="@android:color/white"
            android:text="@string/txt_finished"/>

    </LinearLayout>

    
</LinearLayout>
