<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gachat.main.ui.login.activity.ForgetPasswordActivity">

    <include layout="@layout/toolbar_base"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="4">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGrayDark"
                    android:textSize="14sp"
                    android:text="@string/txt_PhoneNum_title"/>
                <EditText
                    android:id="@+id/et_inputPhoneNum"
                    android:theme="@style/EditTextViewTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:textSize="14sp"
                    android:hint="@string/txt_inputPhone"/>
            </LinearLayout>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="4">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGrayDark"
                    android:textSize="14sp"
                    android:text="@string/txt_verificationCode_title"/>
                <EditText
                    android:id="@+id/et_inputVerificationCode"
                    android:theme="@style/EditTextViewTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textSize="14sp"
                    android:hint="@string/txt_verificationCode_hint"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_requstVerificationCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textColor="@color/colorBlueLight"
                android:text="@string/txt_requestVerificationCode"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="4">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGrayDark"
                android:textSize="14sp"
                android:text="@string/txt_newPassWord_title"/>
            <EditText
                android:id="@+id/et_inputNewPwd"
                android:theme="@style/EditTextViewTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"

                android:textSize="14sp"
                android:hint="@string/txt_newPassWord_hint"/>
            </LinearLayout>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/cb_registerKnowledge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_registerKnowledge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@color/colorBlueLight"
                android:textSize="12sp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_nextStep"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_btn_login_disabled"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:text="@string/txt_nextStep"/>
        </RelativeLayout>

    </LinearLayout>


</LinearLayout>
